--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "anuj singh",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "cheerio": "^1.0.0-rc.3",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
+    "nodemon": "^2.0.3",
     "request": "^2.88.2",
     "request-promise": "^4.2.5"
   }
